--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
-* {
-  margin: 0;
-  box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+.nav-image {
+  width: 3vw;
+  height: auto;
 }
